[gd_scene load_steps=22 format=2]

[ext_resource path="res://FNaF 1/169.png" type="Texture" id=1]
[ext_resource path="res://FNaF 1/176.png" type="Texture" id=2]
[ext_resource path="res://FNaF 1/168.png" type="Texture" id=3]
[ext_resource path="res://FNaF 1/167.png" type="Texture" id=4]
[ext_resource path="res://FNaF 1/173.png" type="Texture" id=5]
[ext_resource path="res://FNaF 1/174.png" type="Texture" id=6]
[ext_resource path="res://FNaF 1/171.png" type="Texture" id=7]
[ext_resource path="res://FNaF 1/170.png" type="Texture" id=8]
[ext_resource path="res://FNaF 1/172.png" type="Texture" id=9]
[ext_resource path="res://FNaF 1/175.png" type="Texture" id=10]
[ext_resource path="res://FNaF 1/165.png" type="Texture" id=11]
[ext_resource path="res://FNaF 1/177.png" type="Texture" id=12]
[ext_resource path="res://FNaF 1/166.png" type="Texture" id=13]
[ext_resource path="res://Camera Buttons/Scripts/Camera buttons.gd" type="Script" id=14]
[ext_resource path="res://FNaF 1/FNaF 1 Audio/blip3.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 4 ) ],
"loop": true,
"name": "Active",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="Camera buttons" type="Node2D"]
script = ExtResource( 14 )

[node name="Cam 1A" type="Node2D" parent="."]
position = Vector2( 991, 359 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 1A"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 1A"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 1A"]
position = Vector2( -8, 0 )
texture = ExtResource( 8 )

[node name="Cam 1B" type="Node2D" parent="."]
position = Vector2( 988, 410 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 1B"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 1B"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 1B"]
position = Vector2( -8, 0 )
texture = ExtResource( 7 )

[node name="Cam 1C" type="Node2D" parent="."]
position = Vector2( 933, 491 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 1C"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 1C"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 1C"]
position = Vector2( -8, 0 )
texture = ExtResource( 12 )

[node name="Cam 2A" type="Node2D" parent="."]
position = Vector2( 989, 607 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 2A"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 2A"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 2A"]
position = Vector2( -8, 0 )
texture = ExtResource( 9 )

[node name="Cam 2B" type="Node2D" parent="."]
position = Vector2( 989, 648 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 2B"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 2B"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 2B"]
position = Vector2( -8, 0 )
texture = ExtResource( 11 )

[node name="Cam 3" type="Node2D" parent="."]
position = Vector2( 908, 588 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 3"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 3"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 3"]
position = Vector2( -8, 0 )
texture = ExtResource( 3 )

[node name="Cam 4A" type="Node2D" parent="."]
position = Vector2( 1094, 607 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 4A"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 4A"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 4A"]
position = Vector2( -8, 0 )
texture = ExtResource( 1 )

[node name="Cam 4B" type="Node2D" parent="."]
position = Vector2( 1094, 648 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 4B"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 4B"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 4B"]
position = Vector2( -8, 0 )
texture = ExtResource( 5 )

[node name="Cam 5" type="Node2D" parent="."]
position = Vector2( 864, 440 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 5"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 5"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 5"]
position = Vector2( -8, 0 )
texture = ExtResource( 6 )

[node name="Cam 6" type="Node2D" parent="."]
position = Vector2( 1192, 571 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 6"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 6"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 6"]
position = Vector2( -8, 0 )
texture = ExtResource( 10 )

[node name="Cam 7" type="Node2D" parent="."]
position = Vector2( 1200, 441 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Cam 7"]
frames = SubResource( 15 )
playing = true

[node name="Button" type="Button" parent="Cam 7"]
margin_left = -29.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="Cam 7"]
position = Vector2( -8, 0 )
texture = ExtResource( 2 )

[node name="Blippos" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="Blip_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="pressed" from="Cam 1A/Button" to="." method="_on_cam_1_pressed"]
[connection signal="pressed" from="Cam 1B/Button" to="." method="_on_cam_2_pressed"]
[connection signal="pressed" from="Cam 1C/Button" to="." method="_on_cam_3_pressed"]
[connection signal="pressed" from="Cam 2A/Button" to="." method="_on_cam_4_pressed"]
[connection signal="pressed" from="Cam 2B/Button" to="." method="_on_cam_5_pressed"]
[connection signal="button_up" from="Cam 3/Button" to="." method="_on_cam_6_pressed"]
[connection signal="pressed" from="Cam 4A/Button" to="." method="_on_cam_7_pressed"]
[connection signal="pressed" from="Cam 4B/Button" to="." method="_on_cam_8_pressed"]
[connection signal="pressed" from="Cam 5/Button" to="." method="_on_cam_9_pressed"]
[connection signal="pressed" from="Cam 6/Button" to="." method="_on_cam_10_pressed"]
[connection signal="pressed" from="Cam 7/Button" to="." method="_on_cam_11_pressed"]
